--- a/AUTHORS.txt
+++ b/AUTHORS.txt
@@ -4,7 +4,7 @@ The following individuals have contributed significantly to the project:
 
 - [Mr. Eugene Rotherham](mailto:eugene.rotherham@gmail.com): Space Generation Advisory Council (SGAC), United Kingdom
 - [Ms. Eva Fernandez Rodriguez](mailto:00evafernandez@gmail.com): Netherlands Organisation for Applied Scientific Research (TNO), The Netherlands
-- [Mr. Connor Casey](mailto:connor.casey2020@gmail.com): Space Generation Advisory Council (SGAC), United States
+- [Mr. Connor Casey](mailto:cacasey@umass.edu): Space Generation Advisory Council (SGAC), United States
 - [Ms. Karen Wendy Vidaurre Torrez](mailto:karen.vidaurre2001@gmail.com): Space Generation Advisory Council (SGAC), Bolivia
 - [Mr. Maren Mashor](mailto:reuben.mashor@gmail.com): Space Generation Advisory Council (SGAC), Nigeria
 - [Mr. Isaac Pike](mailto:isaacpike@outlook.com): University College London (UCL), United Kingdom
