--- a/data/output/Figures_rawdata_3.ipynb
+++ b/data/output/Figures_rawdata_3.ipynb
@@ -321,7 +321,7 @@
     "plt.legend(loc='lower right', ncol=2, borderaxespad=0.5, fontsize=14)\n",
     "\n",
     "# Save the plot in a high-quality format if needed\n",
-    "plt.savefig('00_network_availability.svg', format='svg')\n",
+    "#plt.savefig('00_network_availability.svg', format='svg')\n",
     "\n",
     "plt.show()\n"
    ]
@@ -414,7 +414,7 @@
     "# Adjust legend positioning, moving it lower\n",
     "plt.legend(bbox_to_anchor=(1.00, 0.35), loc='center right', borderaxespad=0.5, fontsize=14)\n",
     "# Save the plot in high quality if needed\n",
-    "plt.savefig('00_transmitted_data.svg', format='svg')\n",
+    "#plt.savefig('00_transmitted_data.svg', format='svg')\n",
     "\n",
     "# Display the plot\n",
     "plt.show()"
@@ -463,12 +463,12 @@
     "\n",
     "\n",
     "\n",
-    "plt.savefig('00_PDT.svg')"
+    "#plt.savefig('00_PDT.svg')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 79,
    "id": "4a771c22-9697-45dd-a835-4e9182af8d41",
    "metadata": {},
    "outputs": [
@@ -525,7 +525,7 @@
     "plt.tight_layout()\n",
     "\n",
     "# Save the figure in SVG format for high-quality output\n",
-    "plt.savefig('00_PDT2.svg', format='svg')\n",
+    "#plt.savefig('00_PDT2.svg', format='svg')\n",
     "\n",
     "# Display the plot\n",
     "plt.show()"
@@ -618,7 +618,7 @@
     "fig.tight_layout()\n",
     "\n",
     "# Save the plot in SVG format for high-quality output\n",
-    "plt.savefig('00_avai_data.svg', format='svg')\n",
+    "#plt.savefig('00_avai_data.svg', format='svg')\n",
     "\n",
     "# Display the plot\n",
     "plt.show()\n"
